--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "lucide-react": "^0.300.0",
         "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18",
-        "lucide-react": "^0.300.0",
-        "recharts": "^2.10.0"
+        "recharts": "^2.10.0",
+        "rss-parser": "^3.13.0"
     }
 }
